src/components/layout.css
@font-face {
  font-family: "SF Hollywood Hills";
  src: url('../../static/fonts/hollywood/SFHollywoodHills.woff2') format('woff2'), /* Super Modern Browsers */
       url('../../static/fonts/hollywood/SFHollywoodHills.woff') format('woff'), /* Pretty Modern Browsers */
       url('../../static/fonts/hollywood/SFHollywoodHills.ttf') format('truetype'); /* Safari, Android, iOS */
  font-weight: normal;
  font-style: normal;
}

html {
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  font-family: 'SF Hollywood Hills';
  letter-spacing: 2px;
  box-sizing: border-box;
  overflow-y: scroll;
  scroll-snap-type: y mandatory;
}

body {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: hsla(0, 0%, 0%, 0.8);
  font-weight: normal;
  word-wrap: break-word;
  font-kerning: normal;
  -moz-font-feature-settings: "kern", "liga", "clig", "calt";
  -ms-font-feature-settings: "kern", "liga", "clig", "calt";
  -webkit-font-feature-settings: "kern", "liga", "clig", "calt";
  font-feature-settings: "kern", "liga", "clig", "calt";
  line-height: 1;
  scroll-snap-type: y mandatory;
}

h1 {
  font-size: 200px;
  text-align: center;
  margin: 0;
}

.sparkle {
 color: white;
}

.text {
  font-size: 34px;
  padding: 20px 0;
}

.start-button {
  font-family: 'SF Hollywood Hills';
  width: 400px;
  height: 100px;
  font-size: 60px;
  background-color: hotpink;
  color: white;
  font-weight: bold;
  border: 1px solid white;
  border-radius: 20px;
  letter-spacing: 4px;
  cursor: pointer;
}

.turn {
  display: none;
  z-index: 100;
  position: fixed;
  z-index: 100;
  height: 100vh;
  background: white;
  align-items: center;
  justify-content: center;
  padding: 20px;
}

@media only screen and (max-height: 500px) and (orientation: landscape) {
  .turn {
    display: flex;
  }
}

.bold-brand {
  color: hotpink;
  font-weight: bold;
}

.scroll-piece {
  scroll-snap-align: start;
  height: 100vh;
  position: relative;
  scroll-snap-stop: always;
  display: flex;
  flex-direction: column;
}

.navigate-arrow {
  position: absolute;
  left: 0;
  right: 0;
  font-size: 100px;
  margin-left: auto;
  margin-right: auto;
  width: 100px;
  text-align: center;
  cursor: pointer;
}

.up {
  top: 30px;
}

.down {
  bottom: 30px;
  transform: scale(1, -1);
}

.scroll-piece:last-child .navigate-arrow.down {
  display: none;
}

.scroll-piece:nth-child(2) .navigate-arrow.down {
  color: white;
}

.loading-indicator {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 30px;
  margin-left: auto;
  margin-right: auto;
  height: 100px;
  width: 100px;
  animation: rotation .7s infinite linear;
}

@keyframes rotation {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(359deg);
  }
}

.quiz-image {
  object-fit: contain;
  max-width: 100%;
  width: auto;
  height: auto;
}

.choice {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  font-size: 20px;
  border: 4px solid hotpink;
  border-radius: 8px;
  padding: 6px;
  margin: 0 8px 8px 0;
  font-family: 'SF Hollywood Hills';
  background-color: white;
  line-height: 1;
  letter-spacing: 2px;
}

.choice.clicked.correct {
  background-color: rgb(0, 255, 0, 0.2);
}

.choice.clicked.incorrect {
  background-color: rgb(255, 0, 0, 0.2);
}

.choice:disabled {
  color: black;
}

.share {
  width: 32px;
  height: 32px;
  background: hotpink;
  padding: 10px;
  border-radius: 100%;
  cursor: pointer;
}

.share-icon {
  color: white;
}

.share-container {
  position: absolute;
  top: 64px;
  left: 20px;
  display: flex;
  align-items: center;
}

.copy-message {
  background: white;
  line-height: 52px;
  padding: 0 10px;
  border: 2px solid hotpink;
  border-radius: 10px;
  opacity: 0;
  cursor: default;
  transition: opacity 0.5s;
}

.show {
  opacity: 1;
}

/* Touch Styles */
@media only screen and (max-width: 480px) {
  html {
    font-size: 100%;
    text-align: center;
  }

  h1 {
    font-size: 100px;
    margin-bottom: 100px;
  }

  .start-button {
    width: 100%;
  }

  .scroll-piece:not(.quiz) {
    justify-content: center;
    align-items: center;
  }

  .navigate-arrow {
    display: none;
  }

  .quiz-content {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
  }

  .quiz-image-container {
    height: 250px;
    display: flex;
    justify-content: center;
    flex-grow: 1;
    margin: 0 20px;
  }

  .quiz .text {
    padding: 20px;
  }

  .choices {
    display: flex;
    flex-wrap: nowrap;
    overflow-x: scroll;
    flex-grow: 1;
    margin: 20px;
    scroll-snap-type: x mandatory;
  }

  .choice {
    flex-grow: 0;
    flex-shrink: 0;
    flex-basis: 80%;
    scroll-snap-align: center;
    scroll-snap-stop: always;
  }

  .final-quiz {
    margin-bottom: 20px;
  }
}

/* Touch Styles on a Longer Device */
@media only screen and (max-width: 480px) and (min-height: 750px) {
  .choice {
    font-size: 26px;
  }
}

/* Desktop Styles */
@media only screen and (min-width: 481px) {
  .scroll-piece {
    justify-content: center;
    align-items: center;
  }

  .quiz-content {
    display: flex;
    margin-top: 40px;
  }

  .quiz-image-container {
    width: 456px;
    height: 350px;
    display: flex;
    justify-content: center;
  }

  .choices {
    display: flex;
    flex-wrap: wrap;
    width: 456px;
  }

  .choice {
    width: 200px;
    cursor: pointer;
  }

  .choice:hover {
    background-color: rgb(255, 105, 180, 0.2);
  }

  .choice.clicked {
    background-color: white;
    cursor: default;
  }

  .final-quiz {
    position: absolute;
    bottom: 30px;
    margin-left: auto;
    margin-right: auto;
    font-size: 24px;
  }

  .share-container {
    top: 30px;
    left: 30px;
  }
}

